--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
   <modelVersion>4.0.0</modelVersion>
   <packaging>war</packaging>
 
-  <name>struct_learn</name>
+  <name>thallo</name>
   <groupId>fish</groupId>
-  <artifactId>struct_learn</artifactId>
+  <artifactId>thallo</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <build>
