--- a/pom.xml
+++ b/pom.xml
@@ -244,5 +244,11 @@
       <artifactId>gson</artifactId>
       <version>2.8.5</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>3.3.0</version>
+    </dependency>
   </dependencies>
 </project>
